# gemini-insights

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
gemini_insights/: cli.py  collect.py  demo.py  render.py
tests/: conftest.py  test_cli.py  test_collect.py  test_render.py
