[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemini-insights"
version = "0.1.0"
description = "Generate a usage report from your Gemini CLI sessions (like Claude Code's /insights)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "atani" }]
keywords = ["gemini", "cli", "insights", "analytics", "report"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/atani/gemini-insights"
Issues = "https://github.com/atani/gemini-insights/issues"

[project.scripts]
gemini-insights = "gemini_insights.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["gemini_insights"]
